Fixed Alignment

--- a/css/index.css
+++ b/css/index.css
@@ -174,14 +174,12 @@ contain: content;
 
     /* Container */
 .container {
-  border: green;
-  border-color: green;
+  border: red;
   border-style: solid;
-    display: flex;
+    display: grid;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: center;
 }
 
 .center {
@@ -196,26 +194,24 @@ contain: content;
 
     /* Parent Container */
 .content_img{
-  position: relative;
-  width: 100%;
-  height: 100%;
+  position: auto;
   float: left;
-  margin-right: 10px;
+  margin-right: auto;
+  border: green;
+  border-style: solid;
+  margin-bottom: auto;
+  
 }
 
 /* Child Text Container */
 .content_img div{
   position: absolute;
-  bottom: 0;
-  right: 0;
-  color: white;
-  font-family: 'Itim';
-  text-align: center;
-  font-size: larger;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: visibility 0s, opacity 0.5s linear; 
-  transition: visibility 0s, opacity 0.5s linear;
+    margin-bottom: 5px;
+    font-family: 'Itim';
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: visibility 0s, opacity 0.5s linear; 
+    transition: visibility 0s, opacity 0.5s linear;
 }
 
 /* Hover on Parent Container */
@@ -224,8 +220,6 @@ contain: content;
 }
 
 .content_img:hover div{
-  width: 100%;
-  height: 50px;
   visibility: visible;
   opacity: 0.6; 
 }
